--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/markodelgadillo/flash-cards#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.15.2",
     "pug": "^2.0.3"
   },
